compiler/testData/diagnostics/tests/inline/inlineCallsPrivateInline.diag.txt
/test.kt:24:47: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
        privateInlineParam: () -> Boolean = ::privateInlineFun,
                                              ^^^^^^^^^^^^^^^^
/test.kt:25:44: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:27:9: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
        privateInlineFun()
        ^^^^^^^^^^^^^^^^
/test.kt:28:9: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:33:47: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
        privateInlineParam: () -> Boolean = ::privateInlineFun,
                                              ^^^^^^^^^^^^^^^^
/test.kt:34:44: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:36:9: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
        privateInlineFun()
        ^^^^^^^^^^^^^^^^
/test.kt:37:9: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:42:13: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
            privateInlineFun()
            ^^^^^^^^^^^^^^^^
/test.kt:43:13: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:50:13: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
            privateInlineFun()
            ^^^^^^^^^^^^^^^^
/test.kt:51:13: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:58:51: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
            privateInlineParam: () -> Boolean = ::privateInlineFun,
                                                  ^^^^^^^^^^^^^^^^
/test.kt:59:48: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:61:13: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
            privateInlineFun()
            ^^^^^^^^^^^^^^^^
/test.kt:62:13: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:67:51: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
            privateInlineParam: () -> Boolean = ::privateInlineFun,
                                                  ^^^^^^^^^^^^^^^^
/test.kt:68:48: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:70:13: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolder'
            privateInlineFun()
            ^^^^^^^^^^^^^^^^
/test.kt:71:13: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:78:44: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:80:5: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolder'
    internalInlineFun()
    ^^^^^^^^^^^^^^^^^
/test.kt:86:48: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:88:9: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:93:48: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:95:9: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:101:52: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
            internalInlineParam: () -> Boolean = ::internalInlineFun
                                                   ^^^^^^^^^^^^^^^^^
/test.kt:103:13: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:108:52: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
            internalInlineParam: () -> Boolean = ::internalInlineFun
                                                   ^^^^^^^^^^^^^^^^^
/test.kt:110:13: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:117:44: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:119:5: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in KSubHolder'
    internalInlineFun()
    ^^^^^^^^^^^^^^^^^
/test.kt:125:48: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:125:48: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:127:9: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:127:9: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:128:9: error: cannot access 'publishedInternalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
        publishedInternalInlineFun()
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:128:9: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun publishedInternalInlineFun(): Boolean defined in KJSubHolder'
        publishedInternalInlineFun()
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:132:48: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:132:48: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
        internalInlineParam: () -> Boolean = ::internalInlineFun
                                               ^^^^^^^^^^^^^^^^^
/test.kt:134:9: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:134:9: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:135:9: error: cannot access 'publishedInternalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
        publishedInternalInlineFun()
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:135:9: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun publishedInternalInlineFun(): Boolean defined in KJSubHolder'
        publishedInternalInlineFun()
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:140:52: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
            internalInlineParam: () -> Boolean = ::internalInlineFun
                                                   ^^^^^^^^^^^^^^^^^
/test.kt:140:52: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
            internalInlineParam: () -> Boolean = ::internalInlineFun
                                                   ^^^^^^^^^^^^^^^^^
/test.kt:142:13: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:142:13: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:143:13: error: cannot access 'publishedInternalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
            publishedInternalInlineFun()
            ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:143:13: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun publishedInternalInlineFun(): Boolean defined in KJSubHolder'
            publishedInternalInlineFun()
            ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:147:52: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
            internalInlineParam: () -> Boolean = ::internalInlineFun
                                                   ^^^^^^^^^^^^^^^^^
/test.kt:147:52: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
            internalInlineParam: () -> Boolean = ::internalInlineFun
                                                   ^^^^^^^^^^^^^^^^^
/test.kt:149:13: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:149:13: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
            internalInlineFun()
            ^^^^^^^^^^^^^^^^^
/test.kt:150:13: error: cannot access 'publishedInternalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
            publishedInternalInlineFun()
            ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:150:13: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun publishedInternalInlineFun(): Boolean defined in KJSubHolder'
            publishedInternalInlineFun()
            ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:156:44: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:156:44: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:158:5: error: cannot access 'internalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
    internalInlineFun()
    ^^^^^^^^^^^^^^^^^
/test.kt:158:5: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun internalInlineFun(): Boolean defined in KJSubHolder'
    internalInlineFun()
    ^^^^^^^^^^^^^^^^^
/test.kt:159:5: error: cannot access 'publishedInternalInlineFun': it is invisible (private in a supertype) in 'KJSubHolder'
    publishedInternalInlineFun()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:159:5: error: public-API inline function cannot access non-public-API 'invisible_fake final inline fun publishedInternalInlineFun(): Boolean defined in KJSubHolder'
    publishedInternalInlineFun()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:177:47: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolderObject'
        privateInlineParam: () -> Boolean = ::privateInlineFun,
                                              ^^^^^^^^^^^^^^^^
/test.kt:178:44: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolderObject'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:180:9: error: public-API inline function cannot access non-public-API 'private final inline fun privateInlineFun(): Boolean defined in FunHolderObject'
        privateInlineFun()
        ^^^^^^^^^^^^^^^^
/test.kt:181:9: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolderObject'
        internalInlineFun()
        ^^^^^^^^^^^^^^^^^
/test.kt:187:44: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolderObject'
    internalInlineParam: () -> Boolean = ::internalInlineFun
                                           ^^^^^^^^^^^^^^^^^
/test.kt:189:5: error: public-API inline function cannot access non-public-API 'internal final inline fun internalInlineFun(): Boolean defined in FunHolderObject'
    internalInlineFun()
    ^^^^^^^^^^^^^^^^^
/test.kt:215:5: error: public-API inline function cannot access non-public-API 'public constructor InternalHolder() defined in InternalHolder'
    InternalHolder().publicInlineDeclarationPrivate()
    ^^^^^^^^^^^^^^
/test.kt:215:22: error: public-API inline function cannot access non-public-API 'public final inline fun publicInlineDeclarationPrivate(): Unit defined in InternalHolder'
    InternalHolder().publicInlineDeclarationPrivate()
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:216:5: error: public-API inline function cannot access non-public-API 'public constructor InternalHolder() defined in InternalHolder'
    InternalHolder().publicInlineDeclarationInternal()
    ^^^^^^^^^^^^^^
/test.kt:216:22: error: public-API inline function cannot access non-public-API 'public final inline fun publicInlineDeclarationInternal(): Unit defined in InternalHolder'
    InternalHolder().publicInlineDeclarationInternal()
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:217:5: error: public-API inline function cannot access non-public-API 'public constructor InternalHolder() defined in InternalHolder'
    InternalHolder().publicInlineDeclarationProtected()
    ^^^^^^^^^^^^^^
/test.kt:217:22: error: public-API inline function cannot access non-public-API 'public final inline fun publicInlineDeclarationProtected(): Unit defined in InternalHolder'
    InternalHolder().publicInlineDeclarationProtected()
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:242:5: error: public-API inline function cannot access non-public-API 'public constructor PrivateHolder() defined in PrivateHolder'
    PrivateHolder().publicInlineDeclarationPrivate()
    ^^^^^^^^^^^^^
/test.kt:242:21: error: public-API inline function cannot access non-public-API 'public final inline fun publicInlineDeclarationPrivate(): Unit defined in PrivateHolder'
    PrivateHolder().publicInlineDeclarationPrivate()
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:243:5: error: public-API inline function cannot access non-public-API 'public constructor PrivateHolder() defined in PrivateHolder'
    PrivateHolder().publicInlineDeclarationInternal()
    ^^^^^^^^^^^^^
/test.kt:243:21: error: public-API inline function cannot access non-public-API 'public final inline fun publicInlineDeclarationInternal(): Unit defined in PrivateHolder'
    PrivateHolder().publicInlineDeclarationInternal()
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:244:5: error: public-API inline function cannot access non-public-API 'public constructor PrivateHolder() defined in PrivateHolder'
    PrivateHolder().publicInlineDeclarationProtected()
    ^^^^^^^^^^^^^
/test.kt:244:21: error: public-API inline function cannot access non-public-API 'public final inline fun publicInlineDeclarationProtected(): Unit defined in PrivateHolder'
    PrivateHolder().publicInlineDeclarationProtected()
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:263:9: error: public-API inline function cannot access non-public-API 'private final val privatePropInline: Int defined in PropHolder'
        privatePropInline
        ^^^^^^^^^^^^^^^^^
/test.kt:264:9: error: public-API inline function cannot access non-public-API 'internal final val internalPropInline: Int defined in PropHolder'
        internalPropInline
        ^^^^^^^^^^^^^^^^^^
/test.kt:265:9: error: public-API inline function cannot access non-public-API 'private final var privateVarPropInline: String defined in PropHolder'
        privateVarPropInline = ""
        ^^^^^^^^^^^^^^^^^^^^
/test.kt:265:9: error: public-API inline function cannot access non-public-API 'private final inline fun `<set-privateVarPropInline>`(value: String): Unit defined in PropHolder'
        privateVarPropInline = ""
        ^^^^^^^^^^^^^^^^^^^^
/test.kt:266:9: error: public-API inline function cannot access non-public-API 'internal final var internalVarPropInline: String defined in PropHolder'
        internalVarPropInline = ""
        ^^^^^^^^^^^^^^^^^^^^^
/test.kt:266:9: error: public-API inline function cannot access non-public-API 'internal final inline fun `<set-internalVarPropInline>`(value: String): Unit defined in PropHolder'
        internalVarPropInline = ""
        ^^^^^^^^^^^^^^^^^^^^^

